tests/files/flow_controller_tests/should_run/038.cmdr
x = parseBool(0);
print x;