tests/files/flow_controller_tests/should_fail/043.cmdr
x = true;
print sin(x);